--- a/.github/workflows/test_address.yml
+++ b/.github/workflows/test_address.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: create folder
         run: mkdir build
+            cd ./build
 
       - name: build cmake
         run: cmake -S . -B build
